# mirage

./: README.md  pyproject.toml
configs/experiments/: mirage.yaml
configs/features/qwen_omni/: qwen3_omni_30b_a3b_thinking_base.yaml
configs/input/: all_layers_mean.yaml  all_layers_unpooled.yaml  fractional_group_mean.yaml  quantile_group_mean.yaml
configs/modality_stack/: all_layers_mean.yaml  concat.yaml  cross_attn_concat.yaml  self_attn_concat.yaml
configs/readout/: subject_linear_post_head_avg.yaml
docs/: eval_submission.md  feature_extraction.md  sample_fmri_visualization.md  training.md
scripts/: infer_fmri_manifest_example.sh  run_online_video_demo.sh
src/brain_enc/: __init__.py  _moviepy.py  cache_identity.py  checkpoints.py  config_schema.py  env.py  modalities.py  paths.py  qwen_ids.py  qwen_prompting.py
src/brain_enc/cli/: _paths.py  ensemble_predictions.py  evaluate.py  extract_features.py  infer_fmri.py  infer_fmri_manifest.py  make_submission.py  prepare_manifest.py  stimulus_index.py  train.py
src/brain_enc/data/: algonauts.py  batch.py  construction.py  feature_store.py  manifest_io.py  splits.py
src/brain_enc/eval/: benchmark.py  ensemble_predictions.py  infer_fmri.py  infer_fmri_manifest.py  model_loading.py  predict_friends_s7.py  predict_ood.py  predict_submission.py
src/brain_enc/features/: __init__.py  _alignment.py  _audio_utils.py  audio.py  base.py  fmri.py  pipeline.py  pooling.py  qwen_omni.py  store_metadata.py  text.py  vision.py
src/brain_enc/models/: __init__.py  aggregators.py  base_brain_encoder.py  builder.py  fmri_heads.py  projectors.py  (+3 more)
(+17 files in other folders)
