[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirage-brain-encoder"
version = "0.1.0"
description = "MIRAGE adaptive multimodal gating encoder for naturalistic-video fMRI prediction"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.7,<2.8",
    "torchvision>=0.22,<0.23",
    "torchaudio>=2.7,<2.8",
    "lightning>=2.0.8",
    "torchmetrics>=1.1.2",
    "transformers>=4.45.0",
    "huggingface-hub[cli]>=0.25.0",
    "safetensors>=0.4.5",
    "julius>=0.2.7",
    "soundfile>=0.12.1",
    "moviepy>=1.0.3",
    "spacy>=3.7.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "levenshtein>=0.25.0",
    "nilearn>=0.10.0",
    "nibabel>=5.1.0",
    "mne>=1.4.0",
    "h5py>=3.11.0",
    "numpy>=1.26,<2.0",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "x-transformers>=1.27.20",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "wandb>=0.15.11",
    "tqdm>=4.65.0",
    "exca>=0.4.5",
    "opencv-python>=4.10,<4.13",
    "tensorboard>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/epflneuroailab/mirage"
Weights = "https://huggingface.co/epfl-neuroai/mirage"

[tool.hatch.build.targets.wheel]
packages = ["src/brain_enc"]

[tool.hatch.metadata]
allow-direct-references = true
